bug(mobile): Recommendation > Three Bottom Buttons, Disabled button has a wrong background [OAPTAU-16]
- fixed a typo in variable name (theme.color.less)
- added class for disabled button in footer (footer.less)

--- a/tau/src/css/profile/mobile/changeable/common/footer.less
+++ b/tau/src/css/profile/mobile/changeable/common/footer.less
@@ -14,6 +14,7 @@
 		&.ui-inline {
 			width: 100%;
 		}
+
 	}
 
 	.ui-btn:not(.ui-btn-circle):not(.ui-btn-nobg):not(.ui-floatingactions-item) {
@@ -22,6 +23,11 @@
 		&.ui-btn-active::before {
 			background-color: @color_button_bottom_bg_press;
 		}
+
+		&.ui-state-disabled {
+			background-color: @color_button_disabled_in_footer;
+		}
+
 	}
 
 	.ui-btn ~ .ui-btn {
